2008-08-12  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 547354 – wrap a few memory stream methods

	* gio/ginputstream.override (_wrap_g_memory_input_stream_add_data):
	New function.

	* gio/gio.defs (gio.MemoryOutputStream.get_contents): Rename from
	get_data() to avoid name clash.

	* gio/goutputstream.override (_wrap_g_memory_output_stream_new)
	(_wrap_g_memory_output_stream_get_data): New functions.

	* tests/test_gio.py (TestMemoryInputStream)
	(TestMemoryOutputStream): New test cases.

2008-08-12  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gio/gio.override: Ignore `g_io_module*' and `g_io_scheduler_*'.

2008-08-11  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 540376 – No TypeError raised when type is None

	* gobject/gobjectmodule.c (pyg_signal_new): Add check on second
	argument type.

	* tests/test_signal.py (TestSignalCreation): New test case.

2008-08-11  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 547104 – improve type wrapper creation

	* gio/gappinfo.override (_wrap_g_app_info_tp_richcompare)
	(_wrap_g_app_info_tp_repr): New functions.

	* tests/test_gio.py (TestAppInfo.test_eq): New test.

2008-08-11  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 547104 – improve type wrapper creation

	* gobject/pygobject.c (pygobject_register_class): Use new
	pygobject_inherit_slots() to propagate custom slots in normal
	types too.
	(pygobject_inherit_slots): New function, break out of
	pygobject_new_with_interfaces() and rewrite a bit.
	(pygobject_find_slot_for): Add new argument that can forbid
	overriding non-NULL slots.

	* gio/gicon.override (pygio_do_icon_richcompare): Remove, the code
	is now directly in _wrap_g_icon_tp_richcompare().
	(_wrap_g_file_icon_tp_richcompare, _wrap_g_file_icon_tp_hash)
	(_wrap_g_themed_icon_tp_richcompare, _wrap_g_themed_icon_tp_hash):
	Remove, duplicating code in this way is not needed anymore.

2008-08-10  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 546120 – make gio.File more Pythonic
